# daedalus

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  __init__.py  alerts.py  formatters.py  plugin.yaml  pyproject.toml  requirements-dev.txt  runtime.py  schemas.py  sprints_cli.py  tools.py  watch.py
assets/: CREDITS.md  sprints-architecture-diagram.html
daedalus/: alerts.py  daedalus_cli.py  runtime.py  tools.py  watch.py  watch_sources.py
docs/: README.md  architecture.md  contributing.md  harness-engineering.md  positioning.md  public-contract.md  release-readiness.md  restructure-shim-audit.md  security.md  slash-commands-catalog.md  symphony-conformance.md  symphony-sprints-component-audit.md
engine/: __init__.py
scripts/: bootstrap.sh  build_banner_gif.py  install.py  install.sh  smoke_live.py
sprints/: __init__.py  plugin.yaml  schemas.py  sprints_cli.py
tests/: test_change_delivery_codex_app_server_smoke.py  test_config_watcher.py  test_daedalus_db_schema_migration.py  test_daedalus_migration.py  test_daedalus_watch_render.py  test_docs_public_workflow_template.py  test_engine_primitives.py  test_event_taxonomy.py  test_formatters_doctor.py  test_install.py  test_official_plugin_layout.py  test_pip_plugin_packaging.py  test_preflight.py  test_public_harness_checks.py  test_rename_pass_phase_d_2.py  test_rename_pass_phase_d_4.py  test_restructure_guardrails.py  test_runtime_agnostic_phase_a.py  test_runtime_matrix.py  test_runtime_tools_alerts.py  test_runtimes_codex_app_server.py  test_stall_detection.py  test_tools_scaffold_workflow.py  (+33 more)
(+150 files in other folders)
