[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-plugin-sprints"
version = "0.3.0"
description = "Sprints workflow engine and operator control surface."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Hermes Agent"},
]
dependencies = [
  "PyYAML",
  "jsonschema",
  "rich",
]
keywords = ["hermes-agent", "plugin", "workflow", "sdlc"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/attmous/sprints"
Repository = "https://github.com/attmous/sprints"
Documentation = "https://github.com/attmous/sprints/tree/main/docs"

[project.entry-points."hermes_agent.plugins"]
sprints = "sprints"

[tool.setuptools]
include-package-data = true

[tool.setuptools.exclude-package-data]
sprints = ["projects/*", "projects/**/*"]

[tool.setuptools.packages.find]
include = ["sprints*"]
